# task_for_tl

./: .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
weather/: Makefile  db.sqlite3  json_response.json
weather/api_weather_now/: apps.py  urls.py  views.py
weather/api_weather_now/migrations/: 0001_initial.py
weather/bot_weather_forecast/: __init__.py  apps.py  urls.py  views.py
weather/weather/: settings.py  urls.py
weather/weather/utils/: save_response_to_json_file.py
